tests/ciliumnetpol-working.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gen
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - {}
  ingress:
  - fromEndpoints:
    - {}
