tests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gen
spec:
  parentRefs:
  - name: gateway
    namespace: istio-system
    sectionName: foobar
  - name: gateway
    namespace: istio-system
    sectionName: same-namespace
  rules:
  - backendRefs:
    - name: httpbin
      port: 81
